@@ -42,6 +42,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - `blueprint`: record built constructions in blueprints
 - `blueprint`: record stockpile/building/zone names in blueprints
 - `blueprint`: record room sizes in blueprints
+- `blueprint`: generate meta blueprints to reduce the number of blueprints you have to apply
 - `ls`: indent tag listings and wrap them in the right column for better readability
 - `ls`: new ``--exclude`` option for hiding matched scripts from the output.  this can be especially useful for modders who don't want their mod scripts to be included in ``ls`` output.
 - `digtype`: new ``-z`` option for digtype to restrict designations to the current z-level and down
